package eu.telecomnancy;

import eu.telecomnancy.model.DeckModel;

public class DrawCardStrategyTime implements DrawCardStrategy {
    public void handleAnswer(boolean answer, DeckModel deckModel) {
        // TODO
    }

    public int nextCard(DeckModel deckModel) {
        // TODO
        return -1;
    }
}
