package eu.telecomnancy.buildCardStrategy;

import javafx.scene.layout.Pane;

public interface BuildCardStrategy {
    public Pane buildCard();
}
