package eu.telecomnancy.buildCardStrategy;

import javafx.scene.layout.Pane;

public class BuildCardStrategyClassic implements BuildCardStrategy {
    public Pane buildCard() {
        // TODO
        return null;
    }
}