package eu.telecomnancy.buildCardStrategy;

import javafx.scene.layout.Pane;

public class BuildCardStrategyTheme2 implements BuildCardStrategy {
    public Pane buildCard() {
        // TODO
        return null;
    }
}