package eu.telecomnancy.observer;

public interface Observer {
    void react();
}
