@startuml
interface Observer {
    + react(): void
}

abstract class CardObserver implements Observer {
}

abstract class DeckObserver implements Observer {
}

abstract class DeckListObserver implements Observer {
}

abstract class StageObserver implements Observer {
}

abstract class Observed {
    + addObs(observer: Observer): void
    + notifyObs(): void
}

class GlobalView extends DeckListObserver {
    + removeDeck(i: int)
    + exportDeck(i: int)
    + importDeck()
    + createDeck(name: String, description: String)
    + toDeckView(): void
}

class DeckView extends DeckObserver {
    + editName(name: String)
    + editDescription(description: String)
    + addCard(question: String, answer: String)
    + removeCard(question: String)
    + toGlobalView(): void
}

class StageView extends StageObserver {
}

class DeckListModel extends Observed {
    + addDeck(name: String, description: String): void
    + removeDeck(i: int): void
}

class DeckModel extends Observed {
    - name: String
    - description: String
    - activeCard: int
    + setName(name: String): void
    + setDescription(description: String): void
    + setActiveCard(id: int): void
    + setDrawCardStrategy(strategy: DrawCardStrategy): void
    + setBuildCardStrategy(strategy: BuildCardStrategy): void
    + addCard(question: String, answer: String): void
    + removeCard(id: int): void
}

class CardModel extends Observed {
    - question: String
    - answer: String
    - probability: float
    + setQuestion(question: String): void
    + setAnswer(answer: String): void
}

class StageModel extends Observed {
    - activeScene: int
    + setActiveScene(scene: int): void
}

class DeckListController {
    + createDeck(name: String, description: String): void
    + removeDeck(i: int): void
    + exportDeck(i: int): void
    + importDeck(): void
}

class DeckController {
    + setName(name: String): void
    + setDescription(description: String): void
    + addCard(question: String, answer: String): void
    + removeCard(id: int): void
    + answeredRight(): void
    + answeredWrong(): void
    + handleAnswer(goodAnswer: boolean): void
    + nextCard(): void
}

class CardController {
    + setQuestion(question: String): void
    + setAnswer(answer: String): void
}

class StageController {
    + setActiveScene(scene: int): void
    + setGlobalView(): void
    + setDeckView(): void
}

class Tag {
    - name: String
    - listUsed: String[]
}

class CardTag extends Tag {
}

class DeckTag extends Tag {
}

interface DrawCardStrategy {
    + handleAnswer(answer: boolean, DeckModel deckModel): void
    + nextCard(DeckModel deckModel): int
}

interface BuildCardStrategy {
    + buildCard()
}

class BuildCardStrategyClassic implements BuildCardStrategy {
}

class BuildCardStrategyTheme2 implements BuildCardStrategy {
}

class DrawCardStrategyRandom implements DrawCardStrategy {
}

class DrawCardStrategyWeighted implements DrawCardStrategy {
}

class DrawCardStrategyTime implements DrawCardStrategy {
}

abstract class Learning {
    + //isFinished(): boolean//
    + nextCard(answer: boolean)
}

class LearningXTimes extends Learning {
    - nbTimesMax: int
    - nbTimesPlayed: int
}

CardObserver -- CardModel
DeckObserver -- DeckModel
DeckListObserver -- DeckListModel
StageObserver -- StageModel

GlobalView -- DeckListController
DeckView -- DeckController
StageView -- StageController
GlobalView -- StageController
DeckView -- StageController

CardController -- CardModel
DeckController -- DeckModel
DeckListController -- DeckListModel
StageController -- StageModel

DeckModel -- DrawCardStrategy
DeckModel -- BuildCardStrategy
DeckModel -- CardModel
DeckListModel -- DeckModel

StageView -- DeckView
StageView -- GlobalView

CardModel -- CardTag
DeckModel -- DeckTag

Learning -- DeckController
@enduml